added new readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 
 # scoccer
 
-Easen the usage of scottish soccer data from data from http://www.football-data.co.uk
+Easen the usage of scottish soccer data from data from http://www.football-data.co.uk. Notes of columns can be found at: http://www.football-data.co.uk/notes.txt
 
 ## Installation
 
@@ -27,7 +27,7 @@ devtools::install_github("steffenbank/scoccer")
 
 ## Basic usage
 
-The most usefull functions within the packages are \code{sco_acquire} and \code{sco_relative_strength}. Description of fields are availble below @ the column notes. Currently are two leagues available:
+The most usefull functions within the packages are *sco_acquire* and *sco_relative_strength*. Description of fields are availble below @ the column notes. Currently are two leagues available:
 
 1. Scottish Premiership ("sco_pl")
 2. Scottish Champtionship ("sco_ch")
@@ -35,51 +35,18 @@ The most usefull functions within the packages are \code{sco_acquire} and \code{
 Years from 2001 till now are available - season inputs may be specificed as "yyyy", for instance 2018/2019 season "1819". 
 
 Data from Scottish Premiership 2017/2018:
-``` r
+```{r,echo = TRUE}
 library(scoccer)
-head(sco_acquire("1718", "sco_pl"))
+dplyr::glimpse(sco_acquire("1718", "sco_pl"))
 ```
 
 Relative strength between Ayr and Partick Thistle the last five games. May be used for model purposes:
-``` r
-library(scoccer)
-sco_relative_strength("1819","sco_pl","Ayr","Partick",5) 
+```{r,echo = TRUE}
+
+dplyr::glimpse(sco_relative_strength("1819","sco_ch","Ayr","Partick",5))
 ```
+
+The strength is a measure of how well the team does at attacking/defending at home compared to other teams. Values above one corresponds to relatively better and values below relatively low. 
 
 ## Modeling use
 
-## Column notes
-Key to results data:
-
-Div = League Division \n
-Date = Match Date (dd/mm/yy)
-HomeTeam = Home Team
-AwayTeam = Away Team
-FTHG and HG = Full Time Home Team Goals
-FTAG and AG = Full Time Away Team Goals
-FTR and Res = Full Time Result (H=Home Win, D=Draw, A=Away Win)
-HTHG = Half Time Home Team Goals
-HTAG = Half Time Away Team Goals
-HTR = Half Time Result (H=Home Win, D=Draw, A=Away Win)
-
-Match Statistics (where available)
-Attendance = Crowd Attendance
-Referee = Match Referee
-HS = Home Team Shots
-AS = Away Team Shots
-HST = Home Team Shots on Target
-AST = Away Team Shots on Target
-HHW = Home Team Hit Woodwork
-AHW = Away Team Hit Woodwork
-HC = Home Team Corners
-AC = Away Team Corners
-HF = Home Team Fouls Committed
-AF = Away Team Fouls Committed
-HFKC = Home Team Free Kicks Conceded
-AFKC = Away Team Free Kicks Conceded
-HO = Home Team Offsides
-AO = Away Team Offsides
-HY = Home Team Yellow Cards
-AY = Away Team Yellow Cards
-HR = Home Team Red Cards
-AR = Away Team Red Cards
